--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,7 +4,8 @@
 @media screen and (max-width:700px) {
   body {
     --component-max-width: calc( 100vw - 30px );
-    padding: 0 35px 0 15px;
+    padding: 0;
+    font-size: 1.1rem;
   }
   #form-wrapper {
     /* max-width: 700px; */
@@ -15,7 +16,7 @@
   }
 
   .input-wrapper {
-    padding: 5px 20px;
+    padding: 1em 2em;
   }
 
   #tablewrapper {
@@ -26,6 +27,11 @@
     width: 100vw;
     min-width: 510px;
     overflow: auto;
+  }
+  input[type=button] {
+    --button-height: 2.5em;
+    --button-width: 8rem;
+    margin: 0.7em .5em;
   }
 }
 
@@ -45,6 +51,9 @@
 
   --component-max-width: 650px;
   --component-max-height: auto;
+  --button-height: 2rem;
+  --button-width: 8rem;
+
   --form-cells-min-width: 650px;
 
   --global-max-ViewWidth: 100vw;
@@ -112,7 +121,7 @@ body {
   /* width: calc(100vw ); */
   margin: 0 0;  
   /* padding: 0 15px 0 0; */
-
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -196,8 +205,11 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 5px 0px;
-    
+  padding: 5px 0px;   
+}
+
+.input-wrapper .labels {
+  align-self: center;
 }
 
 
@@ -243,14 +255,14 @@ input[type=button] {
   /* counter-reset: var(--primary-color); */
   color: var(--primary-color);
   border-radius: 8px;
-  width: 100px;
-  height: 1.8rem;
+  width: var(--button-width);
+  height: var(--button-height);
   border: 0px;
   
 }
 
 input[type=number] {
-  max-width: 70px;
+  max-width: 4rem;
   background-color: var(--background-color);
   opacity: 80;
   color: var(--primary-color);
@@ -258,6 +270,7 @@ input[type=number] {
   border: 2px solid var(--primary-color);
   border-radius: 7px;
   padding-left: 5px;
+  font-size: 1.1em;
 }
 
 #title-header {
